--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/scss/css/main.css" />
     <link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
-    <title>Cosplayer | 月姫Himee✨</title>
+    <title>Cosplayer | {{cos_name}}✨</title>
   </head>
   <body>
     <div class="me">
       <section class="window intro">
         <div class="title-bar">
           <button aria-label="Close" class="close"></button>
-          <h1 class="title">月姫Himee</h1>
+          <h1 class="title">{{cos_name}}</h1>
           <button aria-label="Resize" class="resize"></button>
         </div>
 
@@ -22,17 +22,21 @@
         <div class="window-pane">
           <section class="my-bio">
             <figure>
-              <img src="./assets/img/hlily.jpg" alt="Himee cos girl" />
+              <img
+                src="https://picsum.photos/800/800?random=1"
+                alt="{{alt-img_desc}}"
+              />
               <figcaption>
-                <a href="https://www.instagram.com/himee.lily/" target="_blank"
-                  >@himee.lily</a
+                <a href="https://www.instagram.com/" target="_blank"
+                  >@{{insta_cos}}</a
                 >
               </figcaption>
             </figure>
             <p>
-              Hey, if you don't know me I'm Himee, an Italian girl who's into
-              cosplay, make-up and art. Choose to join my community and support
-              all my creativity and passion!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odio,
+              animi nam cumque tempore, in distinctio laborum quaerat quasi
+              molestiae dolores, eos quos nulla cupiditate. Assumenda, error
+              iusto.
             </p>
           </section>
         </div>
@@ -47,17 +51,15 @@
 
         <div class="details-bar links">
           <span
-            ><a href="https://twitter.com/Himeecosplay/" target="_blank"
-              >Twitter</a
-            ></span
+            ><a href="https://twitter.com/" target="_blank">Twitter</a></span
           >
           <span
-            ><a href="https://www.patreon.com/Himeecosplay/" target="_blank"
+            ><a href="https://www.patreon.com/" target="_blank"
               >Patreon</a
             ></span
           >
           <span
-            ><a href="https://www.facebook.com/Himeecosplay/" target="_blank"
+            ><a href="https://www.facebook.com/" target="_blank"
               >Facebook</a
             ></span
           >
@@ -65,52 +67,88 @@
 
         <div class="window-pane gallery">
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-01.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Asuka cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=2"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-02.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Asuka cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=3"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-03.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Asuka cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=4"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-04.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Misa Amane cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=5"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-05.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Mona cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=6"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-06.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=7"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-07.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Kill la Kill cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=8"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-08.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Mona bikini cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=9"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-09.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Komi-san cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=10"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-10.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Kill la Kill cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=11"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-11.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Yor cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=12"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
           <figure class="single-figure">
-            <img src="./assets/img/hlily_stuff-12.jpg" alt="Hime cosplay" />
-            <figcaption class="overlay">Komi-san cosplay</figcaption>
+            <img
+              src="https://picsum.photos/800/800?random=13"
+              alt="{{stuff-img_desc}}"
+            />
+            <figcaption class="overlay">{{desc}}</figcaption>
           </figure>
         </div>
       </section>
