Updated media queries

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 >
               </figcaption>
             </figure>
-            <p>
+            <p id="about-cos">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odio,
               animi nam cumque tempore, in distinctio laborum quaerat quasi
               molestiae dolores, eos quos nulla cupiditate. Assumenda, error
