Added script for image loading

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/scss/css/main.css" />
+    <!-- <link rel="stylesheet" href="./assets/scss/css/system.css"> -->
     <link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
     <title>Cosplayer | {{cos_name}}✨</title>
   </head>
@@ -66,92 +67,9 @@
         </div>
 
         <div class="window-pane gallery">
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=2"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=3"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=4"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=5"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=6"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=7"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=8"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=9"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=10"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=11"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=12"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
-          <figure class="single-figure">
-            <img
-              src="https://picsum.photos/800/800?random=13"
-              alt="{{stuff-img_desc}}"
-            />
-            <figcaption class="overlay">{{desc}}</figcaption>
-          </figure>
         </div>
       </section>
     </div>
   </body>
+  <script src="./assets/js/main.js"></script>
 </html>
